# prismos-ai

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION_SUMMARY.md  DOWNLOAD_BUILD_GUIDE.md  EB1A_EVIDENCE.md  LAUNCH_POST.md  NOTICE  README.md  RELEASE_NOTES.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  graph.py  requirements.txt
docs/: ANDROID_PRODUCTION_SETUP.md  ARCHITECTURE.md  COMPREHENSIVE_GUIDE.md  DEPLOYMENT.md  INSTALLATION.md  IOS_BUILD_SETUP.md  RELEASE_CHECKLIST.md  RELEASE_STRATEGY.md
docs/screenshots/: README.md
scripts/: release-public.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit_log.rs  calendar_keeper.rs  cognitive_profile.rs  doc_chunker.rs  domain_detector.rs  email_keeper.rs  file_indexer.rs  finance_keeper.rs  intent_lens.rs  lib.rs  main.rs  model_tracker.rs  model_verify.rs  ollama_bridge.rs  refractive_core.rs  sandbox_prism.rs  secure_enclave.rs  smart_router.rs  spectrum_graph.rs  thought_currents.rs  whisper_engine.rs  you_port.rs
src-tauri/src/agents/: graph.rs  langgraph_workflow.rs  messages.rs  mod.rs  nodes.rs
src/components/: ActiveAgents.css  ActiveAgents.tsx  CognitiveDriftCard.css  CognitiveDriftCard.tsx  DailyBrief.css  DailyBrief.tsx  DailyDashboard.css  DailyDashboard.tsx  DailySuggestions.css  DailySuggestions.tsx  DomainInsights.css  DomainInsights.tsx  ErrorBoundary.css  ErrorBoundary.tsx  IntentInput.css  IntentInput.tsx  MainView.css  MainView.tsx  OnboardingWizard.css  OnboardingWizard.tsx  ProactivePanel.css  ProactivePanel.tsx  RefractionJournal.css  RefractionJournal.tsx  SandboxPanel.css  SandboxPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx  SpectralTimeline.css  SpectralTimeline.tsx  SpectrumExplorer.css  SpectrumExplorer.tsx  SpectrumGraphView.css  SpectrumGraphView.tsx  SpotlightOverlay.css  SpotlightOverlay.tsx  SuggestionCard.css  SuggestionCard.tsx  (+6 more)
src/hooks/: useChat.ts  useOllama.ts  useSuggestions.ts  useVoice.ts
src/lib/: agents.ts  config.ts  modelRegistry.ts  ollama.ts  (+1 more)
tests/: README.md
(+11 files in other folders)
