[package]
name = "prismos"
version = "0.5.0"
description = "PrismOS-AI — Local-First Agentic Personal AI Operating System (Patent Pending)"
authors = ["PrismOS-AI Contributors"]
edition = "2021"

[lib]
name = "prismos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
futures-util = "0.3"
thiserror = "1"
wasmtime = "27"
tauri-plugin-global-shortcut = "2.3.1"

# Phase 4 — Local Voice + File Indexing
cpal = "0.15"
hound = "3.5"
notify = "6.1"
walkdir = "2"
dirs = "6"
tauri-plugin-updater = "2.10.0"
tauri-plugin-window-state = "2.4.1"

# Phase 5.5 — Document Ingest (PDF, DOCX, PPTX, XLSX)
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.26"
zip = "2"

# Phase 7 — Contextual Screen Awareness (local screen capture)
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
